# homeworks_otus

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
test/: CMakeLists.txt  VersionTest.cpp
